[gd_scene load_steps=13 format=2]

[ext_resource path="res://player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://player2.png" type="Texture" id=3]
[ext_resource path="res://mg.png" type="Texture" id=5]
[ext_resource path="res://Weapon.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="AnimationNodeBlendSpace2D" id=7]

[sub_resource type="AnimationNodeStateMachine" id=2]
states/control_rotation/node = SubResource( 7 )
states/control_rotation/position = Vector2( 347, 141 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "move" ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=6]
resource_name = "move"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}

[node name="Game" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 396.0 ]
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 159, 76 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Player"]
rotation = 1.5708
frames = SubResource( 1 )
animation = "move"
playing = true

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="PlayerAnimTree" type="AnimationTree" parent="Player"]
tree_root = SubResource( 2 )
parameters/playback = SubResource( 3 )
parameters/control_rotation/blend_position = Vector2( 0, 0 )

[node name="PlayerAnim" type="AnimationPlayer" parent="Player/PlayerAnimTree"]
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 4 )
anims/move = SubResource( 6 )

[node name="Tween" type="Tween" parent="Player"]

[node name="Weapon" type="Node2D" parent="Player"]
position = Vector2( -3, 0 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Player/Weapon"]
position = Vector2( 0, -11 )
texture = ExtResource( 5 )

[node name="FirePos" type="Position2D" parent="Player/Weapon"]
position = Vector2( 0, -21 )

[node name="WeaponCool" type="Timer" parent="Player"]
autostart = true

[node name="Player2" type="Sprite" parent="."]
position = Vector2( 253.25, 68 )
scale = Vector2( 2.5, 0.421053 )
texture = ExtResource( 1 )

[node name="Player3" type="Sprite" parent="."]
position = Vector2( 17, -118 )
texture = ExtResource( 1 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="timeout" from="Player/WeaponCool" to="Player" method="_on_WeaponCool_timeout"]
